# scan-enhancer

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
paper/: paper.tex
project/: BatchProcessor.cpp  BatchProcessor.h  CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  CreateStbImplementations.cpp  EnhancerImage.cpp  EnhancerImage.h  columnPrinter.cpp  columnPrinter.h  createStbImplementations.cpp  fileIO.cpp  fileIO.h  main.cpp  tempfile.cpp  tempfile.h  userInterface.cpp  userInterface.h  userinterface.cpp  userinterface.h
project/benchmarks/: threads_benchmark_adaptivethresholding(debug).csv  threads_benchmark_adaptivethresholding(release).csv  threads_benchmark_allparallelized(debug).csv  threads_benchmark_allparallelized(release).csv  threads_benchmark_debug.csv  threads_benchmark_grayscaleconversion(debug).csv  threads_benchmark_grayscaleconversion(release).csv  threads_benchmark_release.csv  threadsbenchmark_plot.R
project/libraries/catch2_testing/: CMakeLists.txt
project/libraries/stb_read_write/: CMakeLists.txt
project/libraries/termcolor/: CMakeLists.txt
project/tests/: EnhancerImage_tests.cpp  catch_main.cpp  fileIO_tests.cpp  tempfile_tests.cpp
